@@ -38,6 +38,11 @@
 <p>2019-06-23  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/miff.c (ReadMIFFImage): Similar fix as to mpc.c</li>
+<li>coders/mpc.c (ReadMPCImage): Fix faulty signed overflow logic
+for profiles[i].length which still allowed overflow.  Fixes
+oss-fuzz issue 15190 &quot;graphicsmagick/coder_MPC_fuzzer:
+Out-of-memory in graphicsmagick_coder_MPC_fuzzer&quot;.</li>
 <li>doc/options.imdoc: Add notes about security hazards due to
 commands which support a <a class="reference external" href="mailto:'&#37;&#52;&#48;filename">'<span>&#64;</span>filename</a>' syntax.</li>
 <li>www/security.rst: Add notes about security hazards due to
